# uniffi-rs

./: CHANGELOG.md  Cargo.toml
.cargo/: config.toml
docs/manual/src/tutorial/: Prerequisites.md  foreign_language_bindings.md
examples/app/uniffi-bindgen-cli/: Cargo.toml
examples/arithmetic/: Cargo.toml
examples/arithmetic-procmacro/: Cargo.toml
examples/async-api-client/: Cargo.toml
examples/callbacks/: Cargo.toml
examples/custom-types/: Cargo.toml
examples/futures/: Cargo.toml
examples/geometry/: Cargo.toml
examples/remote-types/: Cargo.toml
examples/rondpoint/: Cargo.toml
examples/sprites/: Cargo.toml
examples/todolist/: Cargo.toml
examples/traits/: Cargo.toml
fixtures/benchmarks/: Cargo.toml
fixtures/callbacks/: Cargo.toml
fixtures/coverall/: Cargo.toml
fixtures/docstring/: Cargo.toml
fixtures/docstring-proc-macro/: Cargo.toml
fixtures/enum-types/: Cargo.toml
fixtures/error-types/: Cargo.toml
fixtures/ext-types/custom-types/: Cargo.toml
fixtures/ext-types/http-headermap/: Cargo.toml
fixtures/ext-types/lib/: Cargo.toml
fixtures/ext-types/proc-macro-lib/: Cargo.toml
fixtures/ext-types/sub-lib/: Cargo.toml
fixtures/ext-types/uniffi-one/: Cargo.toml
fixtures/futures/: Cargo.toml
fixtures/keywords/kotlin/: Cargo.toml
fixtures/keywords/rust/: Cargo.toml
fixtures/keywords/swift/: Cargo.toml
fixtures/large-enum/: Cargo.toml
fixtures/large-error/: Cargo.toml
fixtures/metadata/: Cargo.toml
fixtures/proc-macro/: Cargo.toml
fixtures/proc-macro-no-implicit-prelude/: Cargo.toml
fixtures/regressions/cdylib-crate-type-dependency/ffi-crate/: Cargo.toml
fixtures/regressions/enum-without-i32-helpers/: Cargo.toml
fixtures/regressions/fully-qualified-types/: Cargo.toml
fixtures/regressions/kotlin-experimental-unsigned-types/: Cargo.toml
fixtures/regressions/logging-callback-interface/: Cargo.toml
fixtures/regressions/missing-newline/: Cargo.toml
fixtures/regressions/swift-callbacks-omit-labels/: Cargo.toml
fixtures/regressions/swift-dictionary-nesting/: Cargo.toml
fixtures/regressions/unary-result-alias/: Cargo.toml
fixtures/regressions/wrong-lower-check/: Cargo.toml
fixtures/simple-fns/: Cargo.toml
fixtures/simple-iface/: Cargo.toml
fixtures/struct-default-values/: Cargo.toml
fixtures/swift-bridging-header-compile/: Cargo.toml
fixtures/swift-link-frameworks/: Cargo.toml
fixtures/swift-omit-labels/: Cargo.toml
fixtures/trait-methods/: Cargo.toml
fixtures/type-limits/: Cargo.toml
fixtures/uitests/: Cargo.toml
fixtures/uniffi-fixture-time/: Cargo.toml
fixtures/version-mismatch/: Cargo.toml
uniffi/: Cargo.toml
uniffi_bindgen/: Cargo.toml
uniffi_build/: Cargo.toml
