[package]
name = "uniffi-example-futures"
edition = "2021"
version = "0.22.0"
license = "MPL-2.0"
publish = false

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
async-std = "1.12.0"
thiserror = "1.0"
uniffi = { package = "hc_uniffi", workspace = true }

[build-dependencies]
uniffi = { package = "hc_uniffi", workspace = true, features = ["build"] }

[dev-dependencies]
uniffi = { package = "hc_uniffi", workspace = true, features = ["bindgen-tests"] }

[features]
ffi-trace = ["uniffi/ffi-trace"]
