[package]
name = "uniffi-fixture-simple-iface"
version = "0.22.0"
edition = "2018"
license = "MPL-2.0"
publish = false

[lib]
name = "uniffi_simple_iface"
crate-type = ["lib", "cdylib"]

[dependencies]
uniffi = { package = "hc_uniffi", workspace = true }
thiserror = "1.0"
lazy_static = "1.4"

[build-dependencies]
uniffi = { package = "hc_uniffi", workspace = true, features = ["build"] }

[dev-dependencies]
uniffi = { package = "hc_uniffi", workspace = true, features = ["bindgen-tests"] }

[features]
ffi-trace = ["uniffi/ffi-trace"]
