[package]
name = "uniffi-fixture-keywords-rust"
version = "0.22.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
name = "uniffi_keywords_rust"

[dependencies]
thiserror = "1.0"
uniffi = { package = "hc_uniffi", workspace = true }

[build-dependencies]
uniffi = { package = "hc_uniffi", workspace = true, features = ["build"] }

[dev-dependencies]
uniffi = { package = "hc_uniffi", workspace = true, features = ["bindgen-tests"] }

[features]
ffi-trace = ["uniffi/ffi-trace"]
