[package]
name = "uniffi-fixture-regression-i356-enum-without-int-helpers"
edition = "2021"
version = "0.22.0"
license = "MPL-2.0"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
name = "uniffi_regression_test_i356"

[dependencies]
uniffi = { package = "hc_uniffi", workspace = true }

[build-dependencies]
uniffi = { package = "hc_uniffi", workspace = true, features = ["build"] }

[dev-dependencies]
uniffi = { package = "hc_uniffi", workspace = true, features = ["bindgen-tests"] }

[features]
ffi-trace = ["uniffi/ffi-trace"]
